<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navProfile"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/navNightMode"
            android:icon="@drawable/ic_night"
            android:title="@string/nav_nightMode"
            app:actionLayout="@layout/layout_switch" />
    </group>

    <group
        android:id="@+id/menu_logout"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>

</menu>